samples/_failures_safe/1761077247_1739b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89e9f013.c:139:1: error: expected ‘{’ at end of input
  139 | void handle_error(struct
      | ^~~~
